--- a/service-new-order/pom.xml
+++ b/service-new-order/pom.xml
@@ -13,6 +13,11 @@
     <dependencies>
         <dependency>
             <groupId>br.com.kafka</groupId>
+            <artifactId>ecommerce</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>br.com.kafka</groupId>
             <artifactId>common-kafka</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
