--- a/services-users/pom.xml
+++ b/services-users/pom.xml
@@ -9,19 +9,20 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>service-log</artifactId>
+    <artifactId>services-users</artifactId>
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
         <dependency>
-            <groupId>br.com.kafka</groupId>
-            <artifactId>ecommerce</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.34.0</version>
         </dependency>
         <dependency>
             <groupId>br.com.kafka</groupId>
             <artifactId>common-kafka</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
+
     </dependencies>
 
     <properties>
